[package]
name = "bay-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
clap = { version = "^3.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "^0.5"
ethers = "0.13"
ethers-providers = "0.13.0"
eyre = "0.6.8"
futures = "0.3"
gql_client = "1.0.6"
json-decode = "0.6.0"
log = "^0.4"
mongodb = "2.2.0"
prettytable-rs = "^0.7"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }

[dev-dependencies]
insta = "0.16"
